frontend/styles/app.css
/* ... */
.spacer {
    display: block;
    align-self: center;
    width: 80%;
    height: 0.2rem;
    min-height: 0.2rem;
    margin: 0.5rem;
    border-radius: var(--tiny-border-radius);
    background: var(--cell-bg);

    &.vertical-spacer {
        width: 0.2rem;
        min-width: 0.2rem;
        height: 90%;
    }
}

.matrix {
    display: grid;
    grid-template: repeat(var(--matrix-height), 1fr) / repeat(var(--matrix-width), 1fr);

    .matrix-cell {
        position: relative;
        width: 1.5rem;
        height: 1.5rem;
        cursor: pointer;

        &::after {
            content: '';
            position: absolute;
            inset: 0;
            border: 0.1rem solid var(--input-secondary);
            border-radius: var(--tiny-border-radius);
            background: var(--input-bg);
            transition: background var(--med-transition-time) var(--bezier-function);
        }

        &.active::after {
            background: var(--input-accent);
            transition-duration: var(--quick-transition-time);
        }
    }
}

#modal-layer {
    position: fixed;
    inset: 0;
    z-index: 5;
    pointer-events: none;
    isolation: isolate;

    & .warning-overlay {
        position: fixed;
        inset: 0;
        display: flex;
        flex-flow: column nowrap;
        gap: 3rem;
        justify-content: center;
        align-items: center;
        overflow-y: auto;
        background: hsl(from var(--dashboard-bg) h s l / 0.6);
        opacity: 0;
        pointer-events: none;
        transition: opacity var(--med-transition-time) ease, pointer-events 0s ease var(--med-transition-time);
        backdrop-filter: blur(0.8rem);

        & .warning-title {
            font-size: var(--font-m);
        }


        & .warning-description {
            position: relative;
            max-width: 60vw;
            font-size: var(--font-s);
            text-align: justify;
        }

        & .warning-solution-steps,
        & .warning-solution-steps .solution-step {
            max-width: 60vw;
            font-size: var(--font-s);
        }

        &.visible {
            opacity: 1;
            pointer-events: all;
        }
    }

    & .off-screen-arrows {
        pointer-events: none;

        & .icon {
            position: absolute;
            width: 8rem;
            height: 8rem;
            background: var(--input-accent);
            opacity: 0;
            filter: drop-shadow(0 0 0.5rem var(--shadow-col));
            transition: opacity var(--quick-transition-time) ease;
            animation-duration: 0.5s;
            animation-play-state: paused;
            animation-timing-function: ease;
            animation-iteration-count: infinite;
            animation-direction: alternate-reverse;

            &#off-screen-right {
                top: calc(50% - 4rem);
                right: 2rem;
                animation-name: arrow-bounce;
            }

            &#off-screen-down {
                bottom: 2rem;
                left: calc(50% - 4rem);
                transform: rotate(90deg);
                animation-name: arrow-bounce-down;
            }

            &.visible {
                opacity: 1;
            }
        }
    }
}

.context-menu:has(#dimensions-item:hover) ~ #modal-layer {

    /* A comment because my linter doesn't like this blank line */

    & #off-screen-down,
    & #off-screen-right {
        animation-play-state: running;
    }
}

.corner-arc {
    filter: url("#glass-distortion");
}

#filter-container {
    pointer-events: none;
}

@media (hover: hover) {
    #nav .nav-entry .button:hover {
        & .personal-icon {
            transform: translate(-0.5rem, 0.2rem) rotate(-10deg);
        }

        & .cloud-exclam-icon {
            opacity: 1;
            transform: scale(0.8) translate(1rem, -1rem) rotate(15deg);
        }

        & .icon,
        & .menu-icon,
        & .menu-icon::before,
        & .menu-icon::after {
            background: hsl(from var(--input-secondary) h s calc(l * 1.5));
        }

    }
}

